apps/staging/linkding/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
    namespace: traefik-gateway
    kind: Gateway
  - name: traefik-gateway
    sectionName: https
    namespace: traefik-gateway
    kind: Gateway
  hostnames:
  - linkding.robertharte.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: linkding
      port: 9090
